[gd_scene load_steps=3 format=3 uid="uid://mlwupvg8a886"]

[ext_resource type="PackedScene" uid="uid://i2nwlab8rau" path="res://addons/gaea/graph/components/inputs/base_parameter.tscn" id="1_22r3d"]
[ext_resource type="Script" uid="uid://bo1ptrbf2x7kt" path="res://addons/gaea/graph/components/inputs/vector3_parameter.gd" id="2_22r3d"]

[node name="Vector3Parameter" instance=ExtResource("1_22r3d")]
script = ExtResource("2_22r3d")
add_input_slot = true
input_type = 7

[node name="XSpinBox" type="SpinBox" parent="." index="1"]
layout_mode = 2
size_flags_horizontal = 3
value = 10.0
allow_greater = true
prefix = "X"

[node name="YSpinBox" type="SpinBox" parent="." index="2"]
layout_mode = 2
size_flags_horizontal = 3
value = 10.0
allow_greater = true
prefix = "Y"

[node name="ZSpinBox" type="SpinBox" parent="." index="3"]
layout_mode = 2
size_flags_horizontal = 3
value = 10.0
allow_greater = true
prefix = "Z"
